# schemas

./: .gitignore  Cargo.toml  README.md  build.rs
base/: Cargo.toml  README.md
base/src/: classes.rs  lib.rs  prelude.rs  properties.rs  traits.rs  types.rs  value.rs
build_helpers/: mod.rs  parse_file.rs  prop-pattern.rs  type-pattern.rs  types-pattern.rs  writer.rs
build_helpers/patterns/: features.rs
src/: builder.rs  features  item_type.rs  lib.rs  main.rs  parse_file.rs  prelude.rs  properties.rs  scope.rs  test.rs  trait.rs  traits.rs  types.rs  writer.rs
src/patterns/: class.rs  prop.rs  type.rs  types.rs
