[package]
name = "schema-rs"
version = "0.1.1"
edition = "2021"
authors = ["Timoz Dimitri <dimitri.timoz@protonmail.com>"]
description = "A Rust library for working with Schema.org data"
license = "MIT"
repository = "https://github.com/DimitriTimoz/schema-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6"
