[package]
name = "schemas"
version = "0.2.1"
edition = "2021"
authors = ["Timoz Dimitri <dimitri.timoz@protonmail.com>", "Mubelotix <mubelotix@gmail.com>"]
description = "A Rust library for working with Schema.org data"
license = "MIT"
repository = "https://github.com/DimitriTimoz/schemas"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6"

[features]
default = []
serde = ["dep:serde"]
